Converting jpackage to use Stream.toList()